--- a/index_home.html
+++ b/index_home.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EcoTee | Camisas</title>
     <link rel="stylesheet" href="style_home.css">
+    <link rel="icon" href="icons/top_logo.png">
 </head>
 <body>
     <header> 
         <div class="menu-content">
-            <h1 class="logo">niaike</h1>
+            <h1 class="logo">EcoTee</h1>
             <nav class="header-menu">
                 <ul class="list-itens">
                     <li>MASCULINO</li>
@@ -26,16 +27,16 @@
             <img id="top-container-image" src="imgs_home/top_container_image.jpg" alt="">
         </div>
         <div class="bottom-top-container">
-            <h1>Lorem.</h1>
-            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum quos inventore iste, ducimus quia laudantium commodi ex sit ipsa soluta est asperiores accusantium ab necessitatibus vero totam maiores dolore accusamus veniam possimus at eos ut eum? Aut voluptatem deserunt soluta.</h2>
+            <h1>Vista-se de consciência.</h1>
+            <h2>onde a moda encontra a sustentabilidade. Nossas camisetas são feitas com materiais ecológicos e processos de produção éticos, garantindo que você não apenas vista estilo, mas também responsabilidade ambiental. Na EcoTee, acreditamos que cada escolha faz a diferença. Descubra nossa coleção e una-se a nós na missão de criar um futuro mais verde, uma camiseta de cada vez.</h2>
         </div>
     </div>
     <div class="bottom-container">
         <div class="categories-container">
             <ul id="categories">
-                <li><img id="img-categorie" src="imgs_home/image_categories1.jpg" alt="" srcset=""></li>
-                <li><img id="img-categorie" src="imgs_home/image_categories1.jpg" alt="" srcset=""></li>
-                <li><img id="img-categorie" src="imgs_home/image_categories1.jpg" alt="" srcset=""></li>
+                <li><img id="img-categorie" src="imgs_home/image_categories1.png" alt="" srcset=""></li>
+                <li><img id="img-categorie" src="imgs_home/image_categories2.png" alt="" srcset=""></li>
+                <li><img id="img-categorie" src="imgs_home/image_categories3.png" alt="" srcset=""></li>
             </ul>
         </div>
     </div>
