--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style_home.css">
+    <link rel="stylesheet" href="style_login.css">
 </head>
 <body>
     <header> 
@@ -22,7 +22,23 @@
         </div>
     </header>
     <form action="" method="post">
-        
+        <div class="super-container">
+            <div class="left-container">
+                <img id="img-login" src="/img_login/img_login.jpg" alt="" srcset="">
+            </div>
+            <div class="right-container">
+                <div class="right-container">
+                    <h1>login</h1>
+                    <input placeholder="usuario" id="user" type="text">
+                    <input placeholder="senha" id="pass" type="password">
+                    <button id="btn-enter" type="button">Entrar</button>
+                </div>
+                <div class="bottom-container">
+                    <h1>NÃo possui uma conta?</h1>
+                    <button id="btn_register" type="button">Registro</button>
+                </div>
+            </div>
+        </div>
     </form>
 </body>
 </html>
